tests/neg/i18408b.check
-- [E103] Syntax Error: tests/neg/i18408b.scala:2:0 --------------------------------------------------------------------
2 |fa(42) // error
  |^^
  |Illegal start of toplevel definition
  |
  | longer explanation available when compiling with `-explain`
-- [E190] Potential Issue Warning: tests/neg/i18408b.scala:3:15 --------------------------------------------------------
3 |def test1 = fa(42)
  |               ^^
  |               Discarded non-Unit value of type Int. Add `: Unit` to discard silently.
  |
  | longer explanation available when compiling with `-explain`
-- [E129] Potential Issue Warning: tests/neg/i18408b.scala:4:16 --------------------------------------------------------
4 |def test2 = fa({42; ()})
  |                ^^
  |                A pure expression does nothing in statement position
  |
  | longer explanation available when compiling with `-explain`
